[options, content_script] changed display formatting
I switched from letters to colons.

--- a/options/options.html
+++ b/options/options.html
@@ -12,11 +12,11 @@
     <br>
     <br>
     <select id="tt-display" class="browser-style">
-      <option value="blank">Blank (display nothing)</option>
-      <option value="watched-dh" selected>Watched: 3d 8h</option>
-      <option value="watched-dhm">Watched: 3d 8h 18m</option>
-      <option value="dh">3d 8h</option>
-      <option value="dhm">3d 8h 18m</option>
+      <option value="blank">Blank [display nothing]</option>
+      <option value="watched-dh" selected>Watched: 3:08 [days:hrs]</option>
+      <option value="watched-dhm">Watched: 3:08:18 [days:hrs:mins]</option>
+      <option value="dh">3:08 [days:hrs]</option>
+      <option value="dhm">3:08:18 [days:hrs:mins]</option>
     </select>
     <button class="browser-style" type="submit">Save</button>
   </form>
