--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,6 +31,14 @@
       <button type="submit">Delete</button>
     </form>
 
+    <button id="delete-all">Delete All</button>
+    <br>
+    <span id="confirmation">
+      <label for="confirm-delete-all">Delete all data?</label>
+      <button id="confirm-delete-all" class="confirmation-btn">Confirm</button>
+      <button id="cancel-delete-all" class="confirmation-btn">Cancel</button>
+    </span>
+
     <hr>
 
     <button id="options" class=twitch_button>Options</button>
